// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YouTube Editor Node YouTube component 1`] = `
<div>
  <div
    className="obojobo-draft--chunks--you-tube viewer pad  is-not-selected"
    contentEditable={false}
    onClick={[Function]}
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
    >
      <button
        className="button"
        contentEditable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        ×
      </button>
    </div>
    <div
      className="obojobo-draft--chunks-you-tube-player"
      id="obojobo-draft--chunks-you-tube-player-mockId"
    />
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center edit-button"
    >
      <button
        className="button"
        contentEditable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        Edit
      </button>
    </div>
  </div>
</div>
`;

exports[`YouTube Editor Node YouTube component handles tab 1`] = `"<div><div contenteditable=\\"false\\" class=\\"obojobo-draft--chunks--you-tube viewer pad  is-selected\\"><div class=\\"obojobo-draft--components--button is-not-dangerous align-center delete-button\\"><button class=\\"button\\" tabindex=\\"0\\" contenteditable=\\"false\\">×</button></div><div id=\\"obojobo-draft--chunks-you-tube-player-mockId\\" class=\\"obojobo-draft--chunks-you-tube-player\\"></div><div class=\\"obojobo-draft--components--button is-not-dangerous align-center edit-button\\"><button class=\\"button\\" tabindex=\\"0\\" contenteditable=\\"false\\">Edit</button></div></div></div>"`;

exports[`YouTube Editor Node YouTube renders with no id correctly 1`] = `
<div>
  <div
    className="obojobo-draft--chunks--you-tube viewer pad  is-not-selected"
    contentEditable={false}
    onClick={[Function]}
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
    >
      <button
        className="button"
        contentEditable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        ×
      </button>
    </div>
    <div
      className="empty-frame"
    >
      <div>
        <p>
          No video specified. Click 'Edit' to add one.
        </p>
      </div>
    </div>
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center edit-button"
    >
      <button
        className="button"
        contentEditable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        Edit
      </button>
    </div>
  </div>
</div>
`;
